--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -871,7 +871,7 @@
 
 </dd>
 
-<dt>More than 1 slip for the same employee</dt>
+<dt>More than 1 slip </dt>
 <dd><p>Report the pensionable earnings amount for each period of employment in box 26 of each T4 slip if you give the same employee more than one T4 slip for the year.</p>
             <details><summary>Example</summary>
             <p>An employee earned $35,000 working in Ontario from January 2021 to June 2021 and earned $35,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 26 as follows:</p>
@@ -1123,13 +1123,27 @@
            </li>
 
 <li class="code-num mrgn-lft-md"><details><summary>Box 52 – Pension adjustment <span class="label label-info">Jeremiah</span></summary>
-         <p id="bx_52">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has under a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) or a deferred profit sharing plan (<abbr title="Deferred profit sharing plan ">DPSP</abbr>) using box 52. If you report an amount in box 52, you have to enter the plan registration number using <a href="#bx_50">box 50</a>.</p>
+         <p id="bx_52">Report the amount (in dollars only) of a pension adjustment (<abbr title="Pension adjustment">PA</abbr>) an employee has under a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) or a deferred profit sharing plan (<abbr title="Deferred profit sharing plan ">DPSP</abbr>) using box 52. If you report an amount in box 52, you have to enter the plan registration number using <a href="#bx_50">box 50</a>.</p>
 
  <h4>Specific situations </h4>
 <dl class="dl-horizontal">
+<dt> </dt>
+<dd><p><strong>Do not</strong> report any amount using box 52 if the employee participated in your RPP or DPSP and one of the following applies:</p>
+<ul>
+<li>The calculated <abbr title="pension adjustment">PA</abbr> is a negative amount or 0</li>
+<li>The employee died during the year</li>
+<li>The employee, even if they are still a member of the plan, no longer accrues new pension credits in the year (for example, the employee has accrued the maximum number of years of service in respect of the plan)</li>
+</ul>
+ </dd>
 
 <dt>Periods of leave or reduced services under a <abbr title="Multi-employer plan">MEP</abbr></dt>
 <dd><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr> using box 52, use the <a href="/cra-arc/payroll/file/t4Aslip.html">T4A slip</a>. </dd>
+
+<dt>More than 1 slip</dt>
+<dd>Report the <abbr title="pension adjustment">PA</abbr> proportionately on each T4 slip if you have to fill out more than one T4 slip because they worked in more than one province or territory. If you cannot apportion the <abbr title="Pension adjustment">PA</abbr>, report the total amount on one slip.</dd>
+
+<dt>More than one <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan ">DPSP</abbr></dt>
+<dd>Report the amount of the employee's <abbr title="Pension adjustment">PA</abbr> you calculated using the total amount of all pension credits accumulated by the employee under all these plans for the year if the employee participates in one or more <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan ">DPSP</abbr> using box 52.</dd>
 
 </dl>   
 
