--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -439,7 +439,9 @@
 <dt><abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr></dt>
 <dd><p id="bx_28"><strong>Do not</strong> use box 28 if you report either of the following:</p>
 <ul><li> Pensionable earnings using <a href="#bx_26">box 26</a></li>
-<li>Retiring allowances using <a href="#cd_66">code 66</a>, <a href="#cd_67">code 67</a> <strong>or</strong> <a href="#cd_69">code 69</a> and no other type of income</li>
+<li>Retiring allowances and no other type of income is paid, reported using <a href="#cd_66">code 66</a>, <a href="#cd_67">code 67</a> <strong>or</strong> <a href="#cd_69">code 69</a> </li>
+<li>An amount greater than “0” using boxes <a href="#bx_16">16</a>, <a href="#bx_16a">16a</a>, <a href="#bx_17">17</a>, <a href="#bx_17a">17a</a> or <a href="#bx_26">26</a> </li>
+<li>Reported “0” in <a href="#bx_26">26</a> and the employee gave you a copy of a filled out Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election </li>
 </ul>
 <br>
 <p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if one of the following apply:</p>
@@ -1122,7 +1124,7 @@
             </details>
            </li>
 
-<li class="code-num mrgn-lft-md"><details><summary>Box 52 – Pension adjustment <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num mrgn-lft-md"><details><summary>Box 52 – Pension adjustment </summary>
          <p id="bx_52">Report the amount (in dollars only) of a pension adjustment (<abbr title="Pension adjustment">PA</abbr>) an employee has under a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) or a deferred profit sharing plan (<abbr title="Deferred profit sharing plan ">DPSP</abbr>) using box 52. If you report an amount in box 52, you have to enter the plan registration number using <a href="#bx_50">box 50</a>.</p>
 
  <h4>Specific situations </h4>
