--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -451,12 +451,12 @@
 </dd>
 
 <dt><abbr title="Employment insurance">EI</abbr></dt>
-<dd><p><strong>Do not</strong> use box 28 if you report insurable earnings using <a href="#bx_24">box 24</a>.</p>
+<dd><p><strong>Do not</strong> use box 28 if you report <abbr title="Employment insurance">EI</abbr> premiums deducted using <a href="#bx_18">box 18</a> or <abbr title="Employment insurance">EI</abbr> insurable earnings using <a href="#bx_24">box 24</a>.</p>
 <p>Enter an "X" or a check mark under <abbr title="Employment insurance">EI</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Employment insurance">EI</abbr> premiums for the <strong>full</strong> reporting period.</p>
 </dd>
 
 <dt><abbr title="Provincial parental insurance plan">PPIP</abbr></dt>
-<dd><p><strong>Do not</strong> use box 28 if you report insurable earnings using <a href="#bx_55">box 55</a>.</p>
+<dd><p><strong>Do not</strong> use box 28 if you report <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums using <a href="#bx_55">box 55</a> or <abbr title="Provincial parental insurance plan">PPIP</abbr> insurable earnings using <a href="#bx_56">box 56</a>.</p>
 <p>Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums for the <strong>full</strong> reporting period.</p>
 </dd>
 
