--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -430,7 +430,7 @@
             </details>
 		    </li>
 
-<li class="code-num mrgn-lft-md"><details><summary >Box 28 – Exempt (CPP/QPP, EI, and PPIP) <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num mrgn-lft-md"><details><summary >Box 28 – Exempt (CPP/QPP, EI, and PPIP) </summary>
                     
                
  <h4>Specific situations</h4>
@@ -441,11 +441,11 @@
 <ul><li> Pensionable earnings using <a href="#bx_26">box 26</a></li>
 <li>Retiring allowances and no other type of income is paid, reported using <a href="#cd_66">code 66</a>, <a href="#cd_67">code 67</a> <strong>or</strong> <a href="#cd_69">code 69</a> </li>
 <li>An amount greater than “0” using boxes <a href="#bx_16">16</a>, <a href="#bx_16a">16a</a>, <a href="#bx_17">17</a>, <a href="#bx_17a">17a</a> or <a href="#bx_26">26</a> </li>
-<li>Reported “0” in <a href="#bx_26">26</a> and the employee gave you a copy of a filled out Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election </li>
+<li>Reported “0” in <a href="#bx_26">box 26</a> and the employee gave you a copy of a filled out Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election </li>
 </ul>
 <br>
 <p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if one of the following apply:</p>
-<ul><li>You <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Canada Pension Plan">CPP</abbr> or <abbr title="Quebec Pension Plan">QPP</abbr> contributions for the <strong>full</strong> reporting period.</li>
+<ul><li>You <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Canada Pension Plan">CPP</abbr> or <abbr title="Quebec Pension Plan">QPP</abbr> contributions for the <strong>full</strong> reporting period</li>
 <li>You enter an employment code using <a href="#bx_29">box 29</a></li>
 </ul>
 </dd>
