--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1405,7 +1405,7 @@
 <li>The shareperson amount if the fisher is a type 2 using <a href="#cd_80">code 80</a> </li>
 </ul>
 
-<p <p class="mrgn-tp-md">><strong>Do not </strong>report this amount in box 14.</p>  
+<p <p class="mrgn-tp-md"><strong>Do not </strong>report this amount in box 14.</p>  
           
             </details> 
 			</li>
