--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -440,8 +440,8 @@
 <dd><p id="bx_28"><strong>Do not</strong> use box 28 if you report either of the following:</p>
 <ul><li> Pensionable earnings using <a href="#bx_26">box 26</a></li>
 <li>Retiring allowances and no other type of income is paid, reported using <a href="#cd_66">code 66</a>, <a href="#cd_67">code 67</a> <strong>or</strong> <a href="#cd_69">code 69</a> </li>
-<li>An amount greater than “0” using boxes <a href="#bx_16">16</a>, <a href="#bx_16a">16a</a>, <a href="#bx_17">17</a>, <a href="#bx_17a">17a</a> or <a href="#bx_26">26</a> </li>
-<li>Reported “0” in <a href="#bx_26">box 26</a> and the employee gave you a copy of a filled out Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election </li>
+<li>An amount greater than "0" using boxes <a href="#bx_16">16</a>, <a href="#bx_16a">16a</a>, <a href="#bx_17">17</a>, <a href="#bx_17a">17a</a> or <a href="#bx_26">26</a> </li>
+<li>Reported "0" in <a href="#bx_26">box 26</a> and the employee gave you a copy of a filled out Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election </li>
 </ul>
 <br>
 <p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if one of the following apply:</p>
@@ -1047,7 +1047,7 @@
 </ul>
 </dd>
 
-<dt>More than 1 slip for the same employee</dt>
+<dt>More than 1 slip </dt>
 <dd><p>Report the insurable earnings amount for each period of employment in box 24 of each T4 slip if you give the same employee more than one T4 slip for the year.</p>
             <details><summary>Example</summary>
             <p>An employee earned $30,000 working in Ontario from January 2021 to June 2021 and earned $30,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 24 as follows:</p>
