--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -385,7 +385,7 @@
            </li>
 
 <li class="code-num">  	
- <details><summary><span class="label label-warning">Slips filed for calendar year 2023 and after</span> Box 015 – Payer-offered dental benefits (PODB) </summary>
+ <details><summary>Box 015 – Payer-offered dental benefits (PODB) <span class="label label-warning">Slips filed for calendar year 2023 and after</span> </summary>
 <p id="bx015">For T4A slips filed for calendar year 2023 and after, if you <strong>provided access to any dental care insurance or for coverage of dental services of any kind</strong> to a recipient, enter the appropriate code from the following list to indicate the level of access to services you provided:</p>
    
 <div class="table-responsive section">
