--- a/payroll/file/t4summary.html
+++ b/payroll/file/t4summary.html
@@ -262,7 +262,7 @@
   <p>Add the amounts in box 16 of all T4 slips. Report the total on line 16.</p> 
  </details> 
 
-<details><summary id="bx_16a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Boxes 16A – Employee's second CPP (CPP2) contributions</summary>	
+<details><summary id="bx_16a">Boxes 16A – Employee's second CPP (CPP2) contributions <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>	
 <p>For T4 summaries filed for calendar year 2024 and after, add the amounts in box 16A of all T4 slips. Report the total on line 16A.</p>
 <p>The CRA will provide more instructions by the end of 2023. </p>
 </details>	
@@ -272,7 +272,7 @@
   <p>Report your share of CPP contributions on line 27.</p> 
  </details>
 
-<details><summary id="bx_27a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Boxes 27A – Employer's second CPP (CPP2) contributions</summary>	
+<details><summary id="bx_27a">Boxes 27A – Employer's second CPP (CPP2) contributions <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>	
 <p>For T4 summaries filed for calendar year 2024 and after, report your share of CPP2 contributions on line 27A.</p>
 <p>The CRA will provide more instructions by the end of 2023. </p>
  </details> 
