--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -279,6 +279,7 @@
 
             <h2 id="h-4">How to fill out</h2>
           <p><strong>Before you fill out the T4 slip, </strong>make sure to review the list of <a href="#special" aria-controls="centred-popup" class="wb-lbx" role="button">special situation&nbsp;<span class="far fa-question-circle"></span></a>.  You can filter by key words to find information specific to your situation.</p> 
+<p> &nbsp;&nbsp; <small><a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View examples of completed T4 slips in special situations</a></small></p> 
 
          
               <section class="mrgn-tp-md" id="details-elements">
@@ -291,7 +292,7 @@
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
-   <h4>Identification&nbsp;&nbsp; <small><a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small>  </h4>
+   <h4>Identification </h4>
 
    <li class="code-num mrgn-lft-md">	<details><summary >Year </summary>
             <p id="yr">Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
@@ -338,7 +339,7 @@
 		</details>
 		</li>
 		
-   <h4>Status&nbsp;&nbsp; <small><a href="#status" aria-controls="right-panel" class="overlay-lnk" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small> </h4>
+   <h4>Status </h4>
 
 <li class="code-num mrgn-lft-md"><details> <summary>Box 10 – Province of employment </summary>
             <p  id="bx_10">Enter the provincial or territorial abbreviation for the province or territory of employment. This is not always the province where the employer is located. </p>
@@ -580,7 +581,7 @@
 </details> 
           </li>
 
-   <h4>Income and deduction&nbsp;&nbsp; <small><a href="#income" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>
+   <h4>Income and deduction </h4>
 	<li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income <span class="label label-info">Jeremiah</span></summary>
             <p id="bx_14">Report your employee's total income before deductions using box 14. </p>
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
@@ -699,7 +700,7 @@
             </details>
 </li>
 
-<h4><abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Quebec Pension Plan">QPP</abbr> and <abbr title="Provincial parental insurance plan">PPIP</abbr>&nbsp;&nbsp; <small><a href="#cppqppppip" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>
+<h4><abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Quebec Pension Plan">QPP</abbr> and <abbr title="Provincial parental insurance plan">PPIP</abbr></h4>
 		
 <li class="code-num mrgn-lft-md"><details><summary>Box 16 – Employee's CPP contributions </summary>
 	   <p id="bx_16">Report amounts you deducted for your employee's share of the Canada Pension Plan (<abbr title="Canada Pension Plan">CPP</abbr>) contributions using box 16 if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment other than Quebec. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
@@ -971,7 +972,7 @@
             </details>
 </li>
 
-<h4><abbr title="Employment insurance">EI</abbr>&nbsp;&nbsp; <small><a href="#ei" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>
+<h4><abbr title="Employment insurance">EI</abbr></h4>
 
 <li class="code-num mrgn-lft-md"><details><summary>Box 18 – Employee's EI premiums </summary>
             <p id="bx_18">Report amounts you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
@@ -1070,7 +1071,7 @@
             </details>
 </li>
 
-<h4><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> &nbsp;&nbsp;<small><a href="#rppdpsp" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>
+<h4><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> </h4>
 
 <li class="code-num mrgn-lft-md">  <details><summary >Box 20 – RPP contributions </summary>
 <p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) using box 20. </p>
@@ -1130,16 +1131,16 @@
  <h4>Specific situations </h4>
 <dl class="dl-horizontal">
 <dt> </dt>
-<dd><p><strong>Do not</strong> report any amount using box 52 if the employee participated in your RPP or DPSP and one of the following applies:</p>
+<dd><p><strong>Do not</strong> report any amount using box 52 if the employee participated in your <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan ">DPSP</abbr> and <strong>one</strong> of the following applies:</p>
 <ul>
-<li>The calculated <abbr title="pension adjustment">PA</abbr> is a negative amount or 0</li>
+<li>The calculated <abbr title="pension adjustment">PA</abbr> is a negative amount or "0"</li>
 <li>The employee died during the year</li>
 <li>The employee, even if they are still a member of the plan, no longer accrues new pension credits in the year (for example, the employee has accrued the maximum number of years of service in respect of the plan)</li>
 </ul>
  </dd>
 
 <dt>Periods of leave or reduced services under a <abbr title="Multi-employer plan">MEP</abbr></dt>
-<dd><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr> using box 52, use the <a href="/cra-arc/payroll/file/t4Aslip.html">T4A slip</a>. </dd>
+<dd><strong>Do not</strong> report the amount of a <abbr title="Pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr> using box 52, use the <a href="/cra-arc/payroll/file/t4Aslip.html">T4A slip</a>. </dd>
 
 <dt>More than 1 slip</dt>
 <dd>Report the <abbr title="pension adjustment">PA</abbr> proportionately on each T4 slip if you have to fill out more than one T4 slip because they worked in more than one province or territory. If you cannot apportion the <abbr title="Pension adjustment">PA</abbr>, report the total amount on one slip.</dd>
@@ -1183,7 +1184,7 @@
 		
 
 	
-<h4>Codes - Other information &nbsp;&nbsp;<small><a href="#codesother" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>		
+<h4>Codes - Other information </h4>		
  
  <li class="code-num mrgn-lft-md"><details><summary>Code 30 – Board and lodging </summary> 
             <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
