--- a/payroll/file/how.html
+++ b/payroll/file/how.html
@@ -146,7 +146,7 @@ You <strong>must</strong> <a href="#h_1_2_2">file by paper</a></dd>
     <p><a href="https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en">Web Forms</a> allows you to complete an information return easily, following step-by-step instructions.</p>
 <details class="mrgn-bttm-md"><summary>Benefits to using Web Forms </summary>
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li"></span> You can file <strong>up to 100 slips </strong>(original, additional, amended, or cancelled) from our website, if you want to file additional slips, file them as original slips</li>
+<li><span class="fas fa-check text-success fa-li"></span> You can file <strong>up to 100 slips </strong>(original, additional, amended, or cancelled) from our website. If you want to file additional slips, file them as original slips</li>
 <li><span class="fas fa-check text-success fa-li"></span> Create an electronic information return containing slips and a summary, which can be saved and imported at a later date </li>
 <li><span class="fas fa-check text-success fa-li"></span> Summary totals are calculated for you </li>
 <li><span class="fas fa-check text-success fa-li"></span> Allows you to print your slips and your summary </li>
