--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1515,10 +1515,11 @@
 
  <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def  modal-xl">
                <header class="modal-header">
-                  <h2 class="modal-title">View sample - Identification</h2>
+                  <h2 class="modal-title">View examples of completed T4 slips in special situations</h2>
                </header>
  
             <div class="modal-body">
+<p>Work in progress - Various examples of completed T4 slips will be added to optimize user experience</p>
              <a class="wb-lbx" href="images/ident.JPG" title="Identification">
                         <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
