--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -632,6 +632,11 @@
 </ul>
 </dd>
 
+<dt>Taxable benefits</dt>
+<dd><p>Report the value of the taxable benefits you provided to your employee using box 14 <strong>and</strong> <a href="#cd_40">code 40</a> unless the benefit is reported in other codes of the T4 slip.</p> 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
+</dd>
+
 <dt>Travel in a prescribed zone</dt>
 <dd><p>Report the total amount of the travel benefit paid to your employees using box 14 <strong>and</strong> <a href="#cd_32">code 32</a>.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
@@ -1288,7 +1293,7 @@
 			</li>
 
 <li class="code-num mrgn-lft-md"><details><summary >Code 40 – Other taxable allowances and benefits </summary> 
-<p id="cd_40">Report the value of the taxable benefit you provided to your employee using code 40 <strong>and</strong> <a href="#bx_14">box 14</a> if the amount is <strong>not</strong> reported in other codes of the T4 slip.  </p>
+<p id="cd_40">Report the value of the taxable benefits you provided to your employee using code 40 <strong>and</strong> <a href="#bx_14">box 14</a> unless the benefit is reported in other codes of the T4 slip.  </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
             </details> 
 			</li>
