--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -648,24 +648,25 @@
    <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/board-lodging-expenses.html">Board, lodging, housing and utilities expenses</a></p>
 </dd>
 
+<dt>Personal use of employer’s automobile or motor vehicle</dt>
+<dd><p>Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee using box 14 <strong>and</strong> <a href="#cd_34">code 34</a>.</p> 
+
+</dd>
+
 <dt>Canadian Forces personnel and police officers</dt>
 <dd><p>Report the employment income using box 14 <strong>and</strong> <a href="#cd_43">code 43</a>. Only report the employment income up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces using code 43.</p></dd>
 
 <dt>Employment commissions</dt>
 <dd><p>Report the employment income from employment commissions you paid to your employee who sold property or negotiated contracts for you using code box 14 <strong>and</strong> <a href="#cd_42">code 42</a>.</p>
 <p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 14.</p>  
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/commission.html">Commission payments</a></p>  
 </dd>
 
 <dt>Emergency volunteers</dt>
-<dd><p>Report the taxable employment income you as a government, municipality, or public authority paid to your employee who is an emergency volunteer (such as a firefighter, ambulance technician, or search and rescue volunteer) using box 14</p>
+<dd><p id="bx_14_cd_87">Report the taxable employment income you as a government, municipality, or public authority paid to your employee who is an emergency volunteer (such as a firefighter, ambulance technician, or search and rescue volunteer) using box 14</p>
 
-<p><strong>Do not </strong> report the tax-exempt amount (up to  $1,000) you paid to your employee who is an emergency volunteer using box 14, use code 87 <a href="#cd_87">code 87</a>.</p>
+<p><strong>Do not </strong> report the tax-exempt amount (up to  $1,000) you paid to your employee who is an emergency volunteer using box 14, use <a href="#cd_87">code 87</a>.</p>
 
-<p>You must report the total amount using box 14 if you paid the individual other than as a volunteer for performing the same or similar duties.</p>
-
-   
- <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/emergency.html">Payments to emergency services volunteers</a></p>    
+<p>You must report the total amount using box 14 if you paid the individual other than as a volunteer for performing the same or similar duties.</p>   
 </dd>
 
 <dt>Employees with power saws or tree trimmers  </dt>
@@ -1477,7 +1478,7 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Employment income of $1,000 or more</dt>
-<dd>Report <strong>only </strong> the tax-exempt amount (up to $1,000) using code 87 <strong>and</strong> the remaining taxable employment income using <a href="#bx_14">box 14</a>.  </dd>
+<dd>Report <strong>only </strong> the tax-exempt amount (up to $1,000) using code 87 <strong>and</strong> the remaining taxable employment income using <a href="?txthl=Emergency+volunteers#bx_14_cd_87">box 14</a>.  </dd>
 <dt>Person does not qualify for the exemption</dt>
 <dd><strong>Do not</strong> report an amount using code 87 if you employed the volunteer for the same or similar duties, use <a href="#bx_14">box 14</a> to report the total amount.</dd>
 </dl>
