--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -632,34 +632,30 @@
 </ul>
 </dd>
 
-<dt>Taxable benefits</dt>
-<dd><p>Report the value of the taxable benefits you provided to your employee using box 14 <strong>and</strong> <a href="#cd_40">code 40</a> unless the benefit is reported in other codes of the T4 slip.</p> 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
+<dt>Board and lodging </dt>
+<dd><p id="bx_14_cd_30">Report the total amount of the board and lodging benefit paid your employee using box 14 <strong>and</strong> <a href="#cd_30">code 30</a>. </p>
+<p><strong>Do not </strong>report using box 14 if you paid lodging and housing benefit at <strong>special work sites</strong>, use <a href="#cd_31">code 31</a> for the tax-exempt board, lodging and housing at the special work sites. </p>
 </dd>
 
 <dt>Travel in a prescribed zone</dt>
-<dd><p>Report the total amount of the travel benefit paid to your employees using box 14 <strong>and</strong> <a href="#cd_32">code 32</a>.</p> 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
-</dd>
-
-<dt>Board and lodging </dt>
-<dd><p>Report the total amount of the board and lodging benefit paid your employee using box 14 <strong>and</strong> <a href="#cd_30">code 30</a>. </p>
-<p><strong>Do not </strong>report using box 14 if you paid lodging and housing benefit at <strong>special work sites</strong>, use <a href="#cd_31">code 31</a> for the tax-exempt board, lodging and housing at the special work sites. </p>
-   <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/board-lodging-expenses.html">Board, lodging, housing and utilities expenses</a></p>
+<dd><p id="bx_14_cd_32">Report the total amount of the travel benefit paid to your employees using box 14 <strong>and</strong> <a href="#cd_32">code 32</a>.</p> 
 </dd>
 
 <dt>Personal use of employer’s automobile or motor vehicle</dt>
-<dd><p>Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee using box 14 <strong>and</strong> <a href="#cd_34">code 34</a>.</p> 
+<dd><p id="bx_14_cd_34">Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee using box 14 <strong>and</strong> <a href="#cd_34">code 34</a>.</p> 
+</dd>
 
+<dt>Taxable benefits</dt>
+<dd><p id="bx_14_cd_40">Report the value of the taxable benefits you provided to your employee using box 14 <strong>and</strong> <a href="#cd_40">code 40</a> unless the benefit is reported in other codes of the T4 slip.</p> 
+</dd>
+
+<dt>Employment commissions</dt>
+<dd><p id="bx_14_cd_42">Report the employment income from employment commissions you paid to your employee who sold property or negotiated contracts for you using code box 14 <strong>and</strong> <a href="#cd_42">code 42</a>.</p>
+<p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 14.</p>  
 </dd>
 
 <dt>Canadian Forces personnel and police officers</dt>
-<dd><p>Report the employment income using box 14 <strong>and</strong> <a href="#cd_43">code 43</a>. Only report the employment income up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces using code 43.</p></dd>
-
-<dt>Employment commissions</dt>
-<dd><p>Report the employment income from employment commissions you paid to your employee who sold property or negotiated contracts for you using code box 14 <strong>and</strong> <a href="#cd_42">code 42</a>.</p>
-<p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 14.</p>  
-</dd>
+<dd><p id="bx_14_cd_43">Report the employment income using box 14 <strong>and</strong> <a href="#cd_43">code 43</a>. Only report the employment income up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces using code 43.</p></dd>
 
 <dt>Emergency volunteers</dt>
 <dd><p id="bx_14_cd_87">Report the taxable employment income you as a government, municipality, or public authority paid to your employee who is an emergency volunteer (such as a firefighter, ambulance technician, or search and rescue volunteer) using box 14</p>
@@ -1238,7 +1234,7 @@
 	
 
 <li class="code-num mrgn-lft-md"><details> <summary>Code 34 – Personal use of employer's automobile or motor vehicle </summary> 
-  <p id="cd_34">Report the value of the automobile benefit for the personal driving of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+  <p id="cd_34">Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Employee's use of their own vehicle </dt>
