--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -645,6 +645,14 @@
 <dd><p id="bx_14_cd_34">Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee using box 14 <strong>and</strong> <a href="#cd_34">code 34</a>.</p> 
 </dd>
 
+<dt>Interest-free and low-interest loans</dt>
+<dd><p id="bx_14_cd_36">Report the value of the taxable benefit from an interest-free or low-interest loan you provided to your employee using <strong>and</strong> <a href="#cd_36">code 36</a>.</p> 
+</dd>
+
+<dt>Security options benefits</dt>
+<dd><p id="bx_14_cd_38">Report the total value of the security options taxable benefit you provided to your employee  using <strong>and</strong> <a href="#cd_38">code 38</a>.</p> 
+</dd>
+
 <dt>Taxable benefits</dt>
 <dd><p id="bx_14_cd_40">Report the value of the taxable benefits you provided to your employee using box 14 <strong>and</strong> <a href="#cd_40">code 40</a> unless the benefit is reported in other codes of the T4 slip.</p> 
 </dd>
@@ -673,7 +681,7 @@
 <dd><strong>Do not </strong>report any amount using box 14 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span></a> <strong>and no other type of income is reported on the T4 slip</strong>. </dd>
 
 <dt>Employee salary overpayments</dt>
-<dd>Add situation</dd>
+<dd>Report salary overpayments you make to your employees using box 14 where the employee does not repay you. </dd>
 
 </dl>   
             </details>
@@ -1185,7 +1193,7 @@
 <h4>Codes - Other information </h4>		
  
  <li class="code-num mrgn-lft-md"><details><summary>Code 30 – Board and lodging </summary> 
-            <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+            <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14_cd_30">box 14</a>.</p>
           <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Member of the clergy or of a religious order</dt>
@@ -1215,7 +1223,7 @@
 
 
 <li class="code-num mrgn-lft-md"><details><summary>Code 32 – Travel in a prescribed zone </summary> 
-          <p id="cd_32">Report the total value of the travel benefit you provided to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+          <p id="cd_32">Report the total value of the travel benefit you provided to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14_cd_32">box 14</a>. </p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Medical travel assistance </dt>
@@ -1234,7 +1242,7 @@
 	
 
 <li class="code-num mrgn-lft-md"><details> <summary>Code 34 – Personal use of employer's automobile or motor vehicle </summary> 
-  <p id="cd_34">Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+  <p id="cd_34">Report the value of the automobile benefit for the personal use of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14_cd_34">box 14</a>.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Employee's use of their own vehicle </dt>
@@ -1252,7 +1260,7 @@
 
 
 <li class="code-num mrgn-lft-md"><details> <summary>Code 36 – Interest-free and low-interest loans </summary> 
-<p id="cd_36">Report the value of the taxable benefit from an interest-free and low interest loan you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+<p id="cd_36">Report the value of the taxable benefit from an interest-free and low interest loan you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14_cd_36">box 14</a>. </p>
 
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/loans.html">Loans and employee debt</a></p>
 </details> 
@@ -1260,7 +1268,7 @@
 
 
 <li class="code-num mrgn-lft-md"><details> <summary>Code 38 – Security options benefits </summary> 
-<p id="cd_38">Report the total value of the security options taxable benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+<p id="cd_38">Report the total value of the security options taxable benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14_cd_38">box 14</a>. </p>
  <h4>Option benefit deductions</h4>
 <dl class="dl-horizontal">
 <dt>Security options deduction under 110(1)(d)</dt>
@@ -1290,7 +1298,7 @@
 			</li>
 
 <li class="code-num mrgn-lft-md"><details><summary >Code 40 – Other taxable allowances and benefits </summary> 
-<p id="cd_40">Report the value of the taxable benefits you provided to your employee using code 40 <strong>and</strong> <a href="#bx_14">box 14</a> unless the benefit is reported in other codes of the T4 slip.  </p>
+<p id="cd_40">Report the value of the taxable benefits you provided to your employee using code 40 <strong>and</strong> <a href="#bx_14_cd_40">box 14</a> unless the benefit is reported in other codes of the T4 slip.  </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
             </details> 
 			</li>
@@ -1303,13 +1311,13 @@
 		</li>
 
 <li class="code-num mrgn-lft-md"><details><summary>Code 42 – Employment commissions </summary> 
-<p  id="cd_42">Report amounts of commissions you paid to your employee who sold property or negotiated contracts for you using code 42 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+<p  id="cd_42">Report amounts of commissions you paid to your employee who sold property or negotiated contracts for you using code 42 <strong>and</strong> <a href="#bx_14_cd_42">box 14</a>.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/commission.html">Commission payments</a></p>         
             </details> 
 			</li>
 
 <li class="code-num mrgn-lft-md"><details><summary>Code 43 – Canadian Armed Forces personnel and police deduction </summary> 
-<p id="cd_43">Report employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code 043 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+<p id="cd_43">Report employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code 043 <strong>and</strong> <a href="#bx_14_cd_43">box 14</a>.</p>
  <p>For 2017 and subsequent taxation years, Canadian Armed Forces personnel and police officers deployed outside Canada can claim a deduction from net income for the amount of employment earnings <strong>they receive while serving on international operational missions </strong>as determined by the Minister of National Defence or by a person designated by that Minister. This is the case regardless of the risk associated with the mission. </p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-24400-canadian-forces-personnel-police-deduction.html">Canadian Armed Forces personnel and police deduction</a></p> 
             </details> 
@@ -1365,9 +1373,9 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt </dt>
-<dd>Report the tax-exempt part of their employment income using code 71 <strong>and</strong> the taxable part of their income using <a href="#bx_14">box 14</a>.</dd>
+<dd>Report the tax-exempt part of their employment income using code 71 <strong>and</strong> the taxable part of their income using <a href="#bx_14_cd_71">box 14</a>.</dd>
 <dt>Fully taxable</dt>
-<dd><strong>Do not</strong> report fully taxable income using code 71, use <a href="#bx_14">box 14</a>.</dd>
+<dd><strong>Do not</strong> report fully taxable income using code 71, use <a href="#bx_14_cd_71">box 14</a>.</dd>
 </dl>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
  
@@ -1474,9 +1482,9 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Employment income of $1,000 or more</dt>
-<dd>Report <strong>only </strong> the tax-exempt amount (up to $1,000) using code 87 <strong>and</strong> the remaining taxable employment income using <a href="?txthl=Emergency+volunteers#bx_14_cd_87">box 14</a>.  </dd>
+<dd>Report <strong>only </strong> the tax-exempt amount (up to $1,000) using code 87 <strong>and</strong> the remaining taxable employment income using <a href="#bx_14_cd_87">box 14</a>.  </dd>
 <dt>Person does not qualify for the exemption</dt>
-<dd><strong>Do not</strong> report an amount using code 87 if you employed the volunteer for the same or similar duties, use <a href="#bx_14">box 14</a> to report the total amount.</dd>
+<dd><strong>Do not</strong> report an amount using code 87 if you employed the volunteer for the same or similar duties, use <a href="#bx_14_cd_87">box 14</a> to report the total amount.</dd>
 </dl>
             <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/emergency.html">Payments to emergency services volunteers</a></p>
             </details> 
