--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -578,7 +578,7 @@
 		
 
    <h4>Income and deduction </h4>
-	<li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income <span class="label label-info">Jeremiah</span></summary>
+	<li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income </summary>
             <p id="bx_14">Report your employee's total income before deductions using box 14. </p>
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
  <details> <summary>Type of payment included in employment income </summary>
@@ -681,7 +681,10 @@
 <dd><strong>Do not </strong>report any amount using box 14 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span></a> <strong>and no other type of income is reported on the T4 slip</strong>. </dd>
 
 <dt>Employee salary overpayments</dt>
-<dd>Report salary overpayments you make to your employees using box 14 where the employee does not repay you. </dd>
+<dd><p>Report salary overpayments you made to your employees using box 14 if your employee <strong>does not</strong>strong> repay you.</p>
+<p><strong>Do not</strong> report any amount using box 14 if the employee <strong>did not</strong> perform their duties.</p>
+<p>Learn more when on how to make corrections when the employee repays you: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html">Make corrections after filing</a></p>
+</dd>
 
 </dl>   
             </details>
@@ -702,7 +705,7 @@
 <dd> <p><strong>Do not </strong>report any amount using box 22 if you withheld under the authority of a garnishee or a requirement to pay that applies to the employee's previously assessed tax arrears.</p></dd>
 </dl>
     
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnit.html">About the deduction of income tax</a>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnit.html">About the deduction of income tax</a></p>
             </details>
 </li>
 
