--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -478,31 +478,16 @@
 
       <details><summary>12 - Self-employed taxi drivers and drivers of other passenger-carrying vehicles</summary>
                <div id="ajax-taxi1">
-                  <p id="bx_29_cd_12">Use code 12 if both of the following apply:</p>
-                  <ul>
-                     <li>The driver does not own more than 50% of the vehicle </li>
-                     <li>The driver does not own or operate a business</li>
-                    </ul>
-   <p class="mrgn-tp-md">A driver is considered to be the owner/operator if both of the following apply:</p>
-                  <ul>
-                     <li>The driver is in a position to gain a profit or risk a loss from operating the taxi business </li>
-                     <li>The has the right to operate a taxicab</li>
-                    </ul>
-<p class="mrgn-tp-md"> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed taxi drivers and drivers of other passenger-carrying vehicles, use code 12.</p>   
-
+                  <p id="bx_29_cd_12">Use code 12 if the worker you paid is a taxi driver or a driver of other passenger-carrying vehicle and is <strong>not</strong> your employee. This includes if the person you paid is registered, or entitled to be registered under the Indian Act.</p>
+                  
  <p class="mrgn-tp-md">Learn more: <a href="/cra-arc/payroll/calculate/payment/taxi.html">Payments to taxi and other passenger-carrying drivers</a></p>
  </div></details>
 
  <details><summary>13 - Self-employed barbers and hairdressers</summary>
                <div id="ajax-barbers">
-                  <p id="bx_29_cd_13">Use code 13 if both of the following apply:</p>
-                  <ul>
-                     <li>??? </li>
-                     <li>??? </li>
-                     <li>???</li>
-                  </ul>
-<p class="mrgn-tp-md"> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed barber or hairdresser, use code 13.</p>   
- <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/barbers.html">Payments to barbers and hairdressers</a>  and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained.html">Barbers and hairdressers - CPP/EI explained</a></p>
+                  <p id="bx_29_cd_13">Use code 13 if the worker you paid is a barber of a hairdresser providing their service in an establishment that offers barbering and hairdressing services and is <strong>not</strong> your employee. This includes if the person you paid is registered, or entitled to be registered under the Indian Act.</p>
+                 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/barbers.html">Payments to barbers and hairdressers</a>  and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained.html">Barbers and hairdressers - CPP/EI explained</a></p>
  </div></details>
 
    <details> <summary>14 -  Withdrawal from a prescribed salary deferral arrangement plan</summary>
